--- a/templates/gdrive/uploadfile.html
+++ b/templates/gdrive/uploadfile.html
@@ -1,16 +1,13 @@
 <html>
 	<h1>UserID:{{user}}</h1>
 	Add your file to upload:
-	<form action="/gdrive/" method="post" enctype="multipart/form-data">
+	<form action="/gdrive/firstwar/" method="post" enctype="multipart/form-data">
 		{% csrf_token %}
 		{{form}}
 		<input type="submit" value="Go" />
 	</form>
-	<br />
-	<br />
-	<br />
-	<br />
-	<br />
+	
+	
 	<br />
 	<br />
 	<br />
