Optimized the code.

--- a/templates/gdrive/secondwar/uploadfile.html
+++ b/templates/gdrive/secondwar/uploadfile.html
@@ -1,5 +1,5 @@
 <html>
-	<h1>UserID:{{user}}</h1><h1>Second War</h1>
+	<h1>UserID:{{user}}</h1><h1>Second War</h1> <a href="/gdrive/secondwar/logout/">Logout From User</a>
 	<br />
 	<br />
 	<br />
